# network_coverage_api

./: .env  .gitignore  Dockerfile  README.md  azure-pipelines.yml  network-coverage.yaml  pyproject.toml
network_coverage_api/app/: data_processing.py  main.py  routes.py  utils.py
network_coverage_api/models/: api_addrese_response.py  network_coverage.py
network_coverage_api/notebooks/: data_preprocessing.ipynb
tests/: conftest.py  test_network_coverage_api.py
tests/resources/: address_api.json  network_coverage_response.json
